atomic/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atomic-server
  namespace: atomic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atomic-server
  template:
    metadata:
      labels:
        app: atomic-server
    spec:
      containers:
        - name: atomic-server
          image: joepmeneer/atomic-server:latest
          ports:
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - name: storage
              mountPath: /atomic-storage
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: atomic-storage
