atomic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atomic-server
  namespace: atomic
spec:
  selector:
    app: atomic-server
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  type: ClusterIP
